# Individual-project-Kreshchenko

./: .gitignore  MemoryTrainingApp.pro  gamewidget.cpp  gamewidget.h
Kreshchenko21/: CMakeLists.txt  README.md  gamelogic.cpp  gamelogic.h  mainmenuwidget.cpp  mainmenuwidget.h  mainwindow.cpp  mainwindow.h
Kreshchenko21/.qtcreator/: CMakeLists.txt.user.c4b6024
Kreshchenko22/: CMakeLists.txt  README.md  gamelogic.cpp  gamewidget.cpp  gamewidget.h  mainmenuwidget.cpp  mainwindow.cpp  mainwindow.h  statswidget.cpp
Kreshchenko23/: README.md
Kreshchenko24/: CMakeLists.txt  gamerepository.h  mainwindow.cpp  mainwindow.h
Kreshchenko27/: CMakeLists.txt  README.md  gamerepository.cpp  gamerepository.h  gamewidget.cpp  gamewidget.h  main.cpp  mainmenuwidget.cpp  mainmenuwidget.h  mainwindow.cpp  mainwindow.h  statswidget.cpp  statswidget.h
